# 2022-tfg-juancamilo-carmona

./: .gitmodules  Proyect description.md
docs/: _config.yml
docs/_data/: navigation.yml
docs/_pages/: about.md
docs/_posts/: 2022-05-12-Week 1: CARLA and ROS2 Setup and communication.md  2022-11-05-CARLA and ROS2 Setup and communication.md  2022-11-05: CARLA and ROS2 Setup and communication.md  (+14 more)
memoria/: anexo.tex  bibliografia.bib  dedicatoria.tex  epilogo.tex  estilo.tex  memoria.tex
tfg/src/carla_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
tfg/src/carla_teleop/carla_teleop/: carla_teleop.py
tfg/src/carla_teleop/launch/: carla_generate_vehicle.launch.py  carla_teleop.launch  carla_teleop.launch.py
tfg/src/line_follower/: CMakeLists.txt  package.xml  references  setup.cfg  setup.py
tfg/src/line_follower/autopilot_line_follower/: autopilot_line_follower.py
tfg/src/line_follower/launch/: autopilot_line_follower.launch  line_follower.launch  ros_bridge_launch  spawn_vehicle.launch.py
tfg/src/line_follower/line_follower/: autopilot_line_follower.py  ba.py  backup.py  line_follower.py
tfg/src/line_follower/metrics/: .~lock.hsv_metrics.csv#  canny_metrics.csv  canny_metrics_1.csv  canny_metrics_2.csv  canny_metrics_3.csv  canny_metrics_4.csv  canny_metrics_5.csv  hsv_metrics.csv  hsv_metrics_1.csv  hsv_metrics_2.csv  hsv_metrics_3.csv  hsv_metrics_4.csv  hsv_metrics_5.csv  metrics.csv  plot.py  sliding_window_metrics_1.csv  sliding_window_metrics_2.csv  sliding_window_metrics_3.csv  sliding_window_metrics_4.csv  sliding_window_metrics_5.csv
(+816 files in other folders)
